--- a/Glosario/www/templates/consultar.html
+++ b/Glosario/www/templates/consultar.html
@@ -1,17 +1,22 @@
 <!--
   This template loads for the 'ListExample' state (app.js)
 -->
-	<ion-pane>
-      <ion-header-bar class="bar-positive">
-        <h1 class="title">Ejemplo de listado</h1>
-      </ion-header-bar>
-      <ion-content>
-        <ion-item>
-		  <ion-label>Gender</ion-label>
-		  <ion-select [(ngModel)]="gender">
-		    <ion-option value="f" checked="true">Female</ion-option>
-		    <ion-option value="m">Male</ion-option>
-		  </ion-select>
-		</ion-item>
-      </ion-content>
-    </ion-pane>
+<ion-view id="">
+    <ion-content padding="true" class="has-header text-center" has-header="true" >
+      <h1 id="pagina1-heading1" style="color:#000000;">GLOSARIO</h1>
+      <div class="button-bar"></div>
+      <div id="markdown1" style="color:#000000;">
+          <p>Bienvenido a
+              <strong>Glosario</strong>
+          </p>
+      </div>
+      
+      <button class="button button-positive button-block" modal-select="" ng-model="someModel" options="selectables" modal-title="Seleccione una Opción" option-getter="getOpt(option)">
+          Selecciona una Opción
+          <div class="option">
+           {{option.enunciado}}
+          </div>
+      </button>
+      <a type="button" href="#/{{someModel}}" style="font-weight:bold;" class="button button-dark">Consultar</a>
+    </ion-content>
+</ion-view>
