--- a/Glosario/www/templates/consultar.html
+++ b/Glosario/www/templates/consultar.html
@@ -12,25 +12,52 @@
       </div>
 
       <div>
-        <button class="button button-positive button-block" modal-select="" ng-model="someModel" options="selectables" modal-title="Seleccione una Opción" option-getter="getOpt(option)">
+        <button class="button button-positive button-block" modal-select="" ng-model="listadoDeConsulta" options="selectables" modal-title="Seleccione una Opción" option-getter="getOpt(option)">
             Selecciona una Opción
             <div class="option">
              {{option.enunciado}}
             </div>
         </button>
+
+         <h3 class="text-center" style="color:#000000;">{{listadoDeConsulta}}</h3>
+
       </div>
 
-      <div ng-show="someModel == 'terminosPorMateria'">
+      <!-- OPCION 1: Ultimos -->
+
+      <div ng-show="listadoDeConsulta == 'ultimos'">
+        <button class="button button-positive button-block" modal-select="" ng-model="ultimosTerminos" options="listado" modal-title="Seleccione una Materia" option-getter="getTerminos(option)" on-select="miSeleccionTerminos(newValue, oldValue)">
+          Selecciona un término
+          <div class="option">
+           {{ option.nombre }}
+          </div>
+        </button>
+
+        <h2 class="text-center" style="color:#000000;">{{ultimosTerminos.nombre}}</h2>
+
+      </div>
+
+      <!--  -->
+
+      <!-- OPCION 2: Por Materias -->
+
+      <div ng-show="listadoDeConsulta == 'terminosPorMateria'">
         <button class="button button-positive button-block" modal-select="" ng-model="misMaterias" options="materiasElegidas" modal-title="Seleccione una Materia" option-getter="getMaterias(option)" on-select="miSeleccion(newValue, oldValue)">
           Selecciona una Materia
           <div class="option">
            {{ option.ensenanza }}
           </div>
         </button>
-         {{misMaterias}}
+
+        <h2 class="text-center" style="color:#000000;">{{misMaterias}}</h2>
+
       </div>
 
-      <a type="button" href="#/{{someModel}}" style="font-weight:bold;" class="button button-dark" ng-model="newinsert.idMateria">Consultar</a>
+      <!--  -->
+
+      <button ui-sref="definiciones" style="font-weight:bold;" class="button button-dark">Consultar definicion</button>
+
+      <a type="button" href="#/{{listadoDeConsulta}}" style="font-weight:bold;" class="button button-dark">Consultar</a>
      
 
     </ion-content>
