--- a/Glosario/www/templates/busquedaDirecta.html
+++ b/Glosario/www/templates/busquedaDirecta.html
@@ -2,7 +2,7 @@
 
 <ion-view id="">
     <ion-content padding="true" class="has-header" has-header="true">
-    	<h2 class="text-center" style="color:#000000;" ng-model="nombreTermino">{{nombreMateria}}</h2>
+    	<h2 class="text-center" style="color:#000000;">Busqueda Directa</h2>
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider">
     			<b>Listado</b>
@@ -11,7 +11,7 @@
 				Press <i class="icon ion-ios7-plus-outline"></i> to add item
 			</ion-item>
 			<!--  -->
-			<ion-item ng-repeat="termino in terminosPorMateria" ng-model="terminoSelecionadoPorMateria">		
+			<ion-item ng-repeat="termino in listado" ng-model="terminoPorBusquedaDirecta">		
 
 				<div ng-click="select_item(termino)">
 	  			 {{ termino.nombre }}
