--- a/Glosario/www/templates/materia.html
+++ b/Glosario/www/templates/materia.html
@@ -4,7 +4,7 @@
 
 <ion-view id="">
     <ion-content padding="true" class="has-header" has-header="true">
-    	<h3 class="text-center" style="color:#000000;">SELECCIONA UNA MATERIA</h3>
+    	<h2 class="text-center" style="color:#000000;"ng-model="nombreTermino">{{nombreTermino}}</h2>
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider">
     			<b>Listado</b>
