--- a/Glosario/www/templates/ultimos.html
+++ b/Glosario/www/templates/ultimos.html
@@ -4,7 +4,7 @@
 
 <ion-view id="">
     <ion-content padding="true" class="has-header" has-header="true">
-    	<h1 class="text-center" style="color:#000000;">ULTIMOS TERMINOS</h1>
+    	<h2 class="text-center" style="color:#000000;">Últimos Términos</h2>
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider">
     			<b>Listado</b>
@@ -13,13 +13,13 @@
 				Press <i class="icon ion-ios7-plus-outline"></i> to add item
 			</ion-item>
 			<!--  -->
-			<ion-item ng-repeat="termino in listado" ng-model="terminoSelecionado" ui-sref="definiciones">		
+			<ion-item ng-repeat="termino in listado" ng-model="terminoSelecionado">		
 
-	  			 {{ termino.id }} - {{ termino.nombre }}
+				<div ng-click="select_item(termino)">
+	  			 {{ termino.nombre }}
+	  			</div>
 
 			</ion-item>
-
-				{{terminoSelecionado.id}}
 		</ion-list>
 	</ion-content>
 </ion-view>
