añadiendo mas funcionalidades

--- a/Glosario/www/templates/consultar.html
+++ b/Glosario/www/templates/consultar.html
@@ -1,7 +1,14 @@
 <!--
   This template loads for the 'ListExample' state (app.js)
 -->
-<ion-view id="">
+<ion-view id="consultar">
+    
+    <ion-nav-bar>
+      <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+      </ion-nav-buttons>
+    </ion-nav-bar>
+
     <ion-content padding="true" class="has-header text-center" has-header="true" >
       <h1 id="pagina1-heading1" style="color:#000000;">GLOSARIO</h1>
       <div class="button-bar"></div>
