--- a/Glosario/www/templates/terminosPorMateria.html
+++ b/Glosario/www/templates/terminosPorMateria.html
@@ -1,6 +1,14 @@
 
 
-<ion-view id="">
+<ion-view id="terminosPorMateria">
+	
+	<ion-header-bar align-title="center" class="bar-positive">
+      <div class="buttons">
+        <button class="button-clear" style="color:#ffffff;" ng-click="volverConsultar()">
+          <i class="ion-arrow-left-b" style="color:#ffffff;"></i> Volver</button>
+      </div> 
+    </ion-header-bar>
+
     <ion-content padding="true" class="has-header" has-header="true">
     	<h2 class="text-center" style="color:#000000;" ng-model="nombreTermino">{{nombreMateria}}</h2>
 		<ion-list option-buttons="itemButtons" can-swipe="true">
