--- a/Glosario/www/templates/busquedaDirecta.html
+++ b/Glosario/www/templates/busquedaDirecta.html
@@ -1,23 +1,42 @@
 
 
-<ion-view id="">
-    <ion-content padding="true" class="has-header" has-header="true">
+<ion-view id="busquedaDirecta">
+
+	<ion-header-bar align-title="center" class="bar-positive">
+      <div class="buttons">
+        <button class="button-clear" style="color:#ffffff;" ng-click="volverConsultar()">
+          <i class="ion-arrow-left-b" style="color:#ffffff;"></i> Volver</button>
+      </div> 
+    </ion-header-bar>
+
+    <ion-content padding="true" class="has-header text-center" has-header="true">
     	<h2 class="text-center" style="color:#000000;">Busqueda Directa</h2>
-		<ion-list option-buttons="itemButtons" can-swipe="true">
-			<label class="item item-divider">
-    			<b>Listado</b>
-  			</label>
-  			<ion-item ng-if="list.length == 0">
-				Press <i class="icon ion-ios7-plus-outline"></i> to add item
-			</ion-item>
-			<!--  -->
-			<ion-item ng-repeat="termino in listado" ng-model="terminoPorBusquedaDirecta">		
+		
 
-				<div ng-click="select_item(termino)">
-	  			 {{ termino.nombre }}
-	  			</div>
-			</ion-item>
+		<label class="item item-input">
+			<input type="search" placeholder="Escribe un indício" class="text-center" style="font-size:1.5em;" ng-model="miBusqueda">
+		</label>
 
-		</ion-list>
+		<br/>
+
+		<div>
+			<button class="button button-positive" ng-model="miBusqueda" ng-click="busqueda(miBusqueda)">
+			  BUSCAR COINCIDENCIAS
+			</button>
+		</div>
+
+		<br/>
+
+		<label class="item item-divider">
+			<b>Resultados:</b>
+		</label>
+
+		<ion-item ng-repeat="termino in listado" ng-model="terminoPorBusquedaDirecta">		
+
+			<div ng-click="select_item(termino)">
+  			 {{ termino.nombre }}
+  			</div>
+
+		</ion-item>
 	</ion-content>
 </ion-view>
