--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -2,7 +2,15 @@
   This template loads for the 'ListExample' state (app.js)
 -->
 
-<ion-view id="">
+<ion-view id="definiciones">
+
+	<ion-header-bar align-title="center" class="bar-positive">
+      <div class="buttons">
+        <button class="button-clear" style="color:#ffffff;" ng-click="volver()">
+          <i class="ion-arrow-left-b" style="color:#ffffff;"></i> Volver</button>
+      </div>
+    </ion-header-bar>
+
     <ion-content padding="true" class="has-header" has-header="true">
     	<h1 class="text-center" style="color:#000000;" ng-model="nombreTermino">{{nombreTermino}}</h1>
 
