cambios en general

--- a/Glosario/www/templates/consultar.html
+++ b/Glosario/www/templates/consultar.html
@@ -15,8 +15,8 @@
       </div>
       --> 
 
-    <drawer side="right">
-      <ion-header-bar align-title="center" class="bar-calm">
+    <drawer side="right" style="background-color: #D9D9D9 !important">
+      <ion-header-bar align-title="center" class="bar-positive">
         <h1 class="title">Menu de Usuario</h1>
         <button class="button button-icon ion-reply" ng-click="toggleDrawer()"></button>
       
