--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -1,14 +1,18 @@
-<!--
-  This template loads for the 'ListExample' state (app.js)
--->
+<!-- definiciones.html -->
 
 <ion-view id="definiciones">
 
 	<ion-header-bar align-title="center" class="bar-positive">
-      <div class="buttons">
-        <button class="button-clear" style="color:#ffffff;" ng-click="volver()">
-          <i class="ion-arrow-left-b" style="color:#ffffff;"></i> Volver</button>
-      </div>
+		<div class="buttons">
+			<button class="button-clear" style="color:#ffffff;" ng-click="volver()">
+			  <i class="ion-arrow-left-b" style="color:#ffffff;"></i> Volver
+			</button>
+		</div>
+		<div class="buttons pull-right">
+			<button class="button-clear" style="color:#ffffff; font-size:1.4em;" ng-click="volver()">
+			  <i class="ion-ios-plus"></i> AGREGAR DEFINICION
+			</button>
+		</div>
     </ion-header-bar>
 
     <ion-content padding="true" class="has-header" has-header="true">
