--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -9,7 +9,7 @@
 			</button>
 		</div>
 		<div class="buttons pull-right">
-			<button class="button-clear" style="color:#ffffff; font-size:1.4em;" ng-click="volver()">
+			<button class="button-clear" style="color:#ffffff; font-size:1.4em;"  ng-click="modal.show()">
 			  <i class="ion-ios-plus"></i> AGREGAR DEFINICION
 			</button>
 		</div>
