--- a/Glosario/www/templates/menu.html
+++ b/Glosario/www/templates/menu.html
@@ -15,7 +15,7 @@
   		          Selecciona una materia :
   		        </div>
   		        
-  		        <ion-radio ng-repeat="option in materiasElegidas"
+  		        <ion-radio ng-repeat="option in materiasDisponibles"
   		                   ng-value="option.id"
   		                   ng-model="nuevoTermino.id">
   		          {{ option.ensenanza }}
