--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -3,29 +3,36 @@
 <ion-view id="definiciones" title="Definiciones">
  	
     <ion-content padding="true" class="has-header" has-header="true">
-
-		<h1 class=" text-center" style="color:#000000;" ng-model="nombreTermino">{{nombreTermino}}</h1>
+    	<br/>
+		<div class="item item-button-right">
+		    <div class=""><h2><b>{{nombreTermino}}</b></h2></div>
+		    <button class="icono_derecha button button-icon positive" ng-click="modal.show()">
+		      <i class="icon ion-ios-plus"></i>
+		    </button>
+		</div>
 
 		<ion-list option-buttons="itemButtons" can-swipe="true">
-			<label class="item item-button-right">
-    			<b>Listado</b>
-    			<button class="button button-positive" ng-click="modal.show()">
-			      <i class="icon ion-ios-plus"></i>
-			    </button>
-  			</label>
+			<label class="item item-divider"><b>Listado</b></label>
 
-			<div class="list card">
-			  <div class="item item-body" ng-repeat="definicion in definiciones">
-			    <p>
-			      {{ definicion.definicion }}
-			    </p>
-			    <p>
-			      <a href="#" class="subdued">1 Like</a>
-			      <a href="#" class="subdued">5 Comments</a>
-			    </p>
-			  </div>
-			</div>
+  			<ion-item class="item item-body" ng-repeat="definicion in definiciones">		
+
+				<div class="concepto_definicion">
+	  			 {{ $index+1 }}: {{ definicion.definicion }}
+	  			</div>
+	  			<div class="item-button-right">
+		  			<button class="icono_derecha button button-icon assertive" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
+			      		<i class="icon ion-android-alert"></i>
+			    	</button>
+		    	</div>
+
+		    	<button class="button button-icon positive" ng-click="puntuacion.show()">
+		      		<i class="icon ion-thumbsup"></i>
+		    	</button>
+	  	
+			</ion-item>
+
 		</ion-list>
+
 
 	</ion-content>
 </ion-view>
