--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -14,18 +14,18 @@
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider"><b>Listado</b></label>
 
-  			<ion-item class="item item-body" ng-repeat="definicion in definiciones">		
+  			<ion-item class="item item-body" ng-repeat="definicion in definiciones" ng-class="{{definicion.denunciado}} == true ? 'denunciado': 'normal'">		
 
 				<div class="concepto_definicion">
 	  			 {{ $index+1 }}: {{ definicion.definicion }}
 	  			</div>
 	  			<div class="item-button-right">
-		  			<button class="icono_derecha button button-icon assertive" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
+		  			<button class="icono_derecha button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'assertive'" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
 			      		<i class="icon ion-android-alert"></i>
 			    	</button>
 		    	</div>
 
-		    	<button class="button button-icon positive" ng-click="puntuacion.show()">
+		    	<button class="button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'positive'" ng-click="valoracion(definicion.id, definicion.denunciado)">
 		      		<i class="icon ion-thumbsup"></i>
 		    	</button>
 	  	
