--- a/Glosario/www/templates/usuario.html
+++ b/Glosario/www/templates/usuario.html
@@ -8,12 +8,17 @@
 
         <ion-list option-buttons="itemButtons" can-swipe="true">
 
-          <label class="item item-divider"><b>Menú de Opciones</b></label>
-          <ion-item ng-click="modal.show()" style="font-size:1.4em;"><i class="ion-ios-plus"></i> AGREGAR TERMINO</ion-item>
+			<label class="item item-divider"><b>Menú de Opciones (Alumno)</b></label>
+			<ion-item ng-click="modal.show()" style="font-size:1.4em;"><i class="ion-ios-plus"></i> AGREGAR TERMINO</ion-item></ion-item>
 
-        </ion-item>
+      	</ion-list>
+      	<br/>
+      	<ion-list option-buttons="itemButtons" can-swipe="true">
 
-      </ion-list>
+			<label class="item item-divider"><b>Menú de Opciones (Profesor)</b></label>
+			<ion-item ng-click="modal.show()" style="font-size:1.4em;"><i class="icon ion-android-alert"></i> DEFINICIONES DENUNCIADAS</ion-item></ion-item>
+
+      	</ion-list>
 
       </ion-content>
 </ion-view>
