--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -4,34 +4,159 @@
  	
     <ion-content padding="true" class="has-header" has-header="true">
     	<br/>
+
 		<div class="item item-button-right">
-		    <div class=""><h2><b>{{nombreTermino}}</b></h2></div>
+		    <div class=""><h2><b>{{nombreTermino| uppercase }}</b></h2></div>
 		    <button class="icono_derecha button button-icon positive" ng-click="modal.show()">
 		      <i class="icon ion-ios-plus"></i>
 		    </button>
 		</div>
 
+		<ion-toggle ng-model="oculto" ng-checked="false"> VER DENUNCIADOS</ion-toggle>
+
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider"><b>Listado</b></label>
 
-  			<ion-item class="item item-body" ng-repeat="definicion in definiciones | orderBy:'denunciado' track by definicion.id" ng-class="{{definicion.denunciado}} == true ? 'denunciado': 'normal'">		
-	
-				<div class="concepto_definicion">
-	  			 {{ $index+1 }}: {{ definicion.definicion }}
-	  			</div>
-	  			<div class="item-button-right">
-		  			<button class="icono_derecha button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'assertive'" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
-			      		<i class="icon ion-android-alert"></i>
-			    	</button>
-		    	</div>
+			<div ng-switch on="oculto">
+				<div ng-switch-when="true" class="animate-switch">
+		  			<ion-item class="item item-body" ng-repeat="definicion in definiciones | orderBy:'-media'" ng-class="{{definicion.denunciado}} == true ? 'marcado': 'normal'" >		
+					
+						<div class="concepto_definicion">
+			  			 {{ $index+1 }}: {{ definicion.definicion }}
+			  			</div>
+			  			<div class="item-button-right">
+				  			<button class="icono_derecha button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'assertive'" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
+					      		<i class="icon ion-android-alert"></i>
+					    	</button>
+				    	</div>
 
-		    	<button class="button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'positive'" ng-click="valoracion(definicion.id, definicion.denunciado)">
-		      		<i class="icon ion-thumbsup"></i>
-		    	</button>
+				    	<button class="button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'positive'" ng-click="valoracion(definicion.id, definicion.denunciado)">
+				      		<i class="icon ion-thumbsup"></i>
+				    	</button>
+				    	<br/>
 
-		    	<div>{{definicion.media}} ({{definicion.valoraciones.length}})</div>
+				    	<div ng-switch on="definicion.media">
+				    		<div ng-switch-when="0">
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+				    		</div>
+						    <div ng-switch-when="1">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="2">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>	
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="3">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>	
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="4">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="5">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>	
+						    </div>
+						</div>
+					</ion-item>
+				</div>
+				<div ng-switch-default class="animate-switch">
+		  			<ion-item class="item item-body" ng-repeat="definicion in definiciones | orderBy:'-media'" ng-class="{{definicion.denunciado}} == true ? 'marcado': 'normal'" ng-if="definicion.denunciado == false" >		
+					
+						<div class="concepto_definicion">
+			  			 {{ $index+1 }}: {{ definicion.definicion }}
+			  			</div>
+			  			<div class="item-button-right">
+				  			<button class="icono_derecha button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'assertive'" ng-click="denunciarDefinicion(definicion.id, definicion.denunciado)">
+					      		<i class="icon ion-android-alert"></i>
+					    	</button>
+				    	</div>
 
-			</ion-item>
+				    	<button class="button button-icon" ng-class="{{definicion.denunciado}} == true ? 'black': 'positive'" ng-click="valoracion(definicion.id, definicion.denunciado)">
+				      		<i class="icon ion-thumbsup"></i>
+				    	</button>
+				    	<br/>
+
+				    	<div ng-switch on="definicion.media">
+				    		<div ng-switch-when="0">
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+				    		</div>
+						    <div ng-switch-when="1">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="2">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>	
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="3">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>	
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="4">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star-outline"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>
+						    </div>
+						    <div ng-switch-when="5">
+						    	<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<i class="media icon ion-ios-star"></i>
+				    			<span>({{definicion.valoraciones.length}})</span>	
+						    </div>
+						</div>
+					</ion-item>
+				</div>
+			</div>
 
 		</ion-list>
 
