--- a/Glosario/www/templates/definiciones.html
+++ b/Glosario/www/templates/definiciones.html
@@ -2,7 +2,7 @@
 
 <ion-view id="definiciones" title="Definiciones">
  	
-    <ion-content padding="true" class="has-header" has-header="true">
+    <ion-content padding="true" class="fondo1 has-header" has-header="true">
     	<br/>
 
 		<div class="item item-button-right">
