--- a/Glosario/www/templates/login.html
+++ b/Glosario/www/templates/login.html
@@ -2,7 +2,7 @@
 
 <ion-view id="login" title="Login">
 
-    <ion-content class="has-header padding">
+    <ion-content class="fondo1 has-header padding">
      
             <br/><br/><br/><br/>
             <div style="width: 100%;text-align: center">
