--- a/Glosario/www/templates/usuario.html
+++ b/Glosario/www/templates/usuario.html
@@ -2,7 +2,7 @@
 
 <ion-view id="usuario" title="Cuenta de Usuario">
 
-    <ion-content class="has-header padding text-center">
+    <ion-content class="fondo1 has-header padding text-center">
 
         <div id="markdown1" style="color:#000000;"><p>Bienvenido <b>usuario</b></p></div>
 
