--- a/Glosario/www/style/style.css
+++ b/Glosario/www/style/style.css
@@ -1,3 +1,24 @@
+.fondo1{
+    background-color: #4F92FF;
+}
+
+.titulo1 h1{
+    color: #fff;
+    font-size: 2em;
+}
+
+.centerme {
+    margin: 0 auto;
+    width: 100%;
+    height:100%;
+}
+
+.logo{
+    margin-top: 20%;
+    margin-bottom: 5%;
+    width: 200px;
+}
+
 .concepto_definicion{
     font-size: 0.85em;
     margin-right: 8.5%;
