--- a/Glosario/www/templates/consultar.html
+++ b/Glosario/www/templates/consultar.html
@@ -2,12 +2,15 @@
 
 <ion-view id="consultar" title="Consultar">
 
-  <ion-content class="has-header padding text-center">
+  <ion-content class="fondo1 has-header padding text-center">
 
-      <div id="markdown1" style="color:#000000;"><p>Bienvenido a <b>Glosario</b></p></div>
-      <br/>
       <div>
-        <button class="button button-positive" modal-select="" ng-model="listadoDeConsulta" options="selectables" modal-title="Seleccione una Opción" option-getter="getOpciones(option)" on-select="miSeleccionOpciones(newValue, oldValue)" hide-reset="true">
+        <img class="logo centerme" ng-src="img/logotipo.png" class="fullscreen-image"/>
+      </div>
+
+      <div id="markdown1" class="titulo1"><h1>Bienvenido a <b>Glosario</b></h1></div>
+      <div class="padding">
+        <button class="button button-light" modal-select="" ng-model="listadoDeConsulta" options="selectables" modal-title="Seleccione una Opción" option-getter="getOpciones(option)" on-select="miSeleccionOpciones(newValue, oldValue)" hide-reset="true">
             Selecciona una Opción
             <div class="option">
              {{option.enunciado}}
