--- a/Glosario/www/templates/terminosPorMateria.html
+++ b/Glosario/www/templates/terminosPorMateria.html
@@ -2,19 +2,19 @@
 
 <ion-view id="terminosPorMateria" title="Términos Por Materia">
 	
-    <ion-content padding="true" class="has-header" has-header="true">
+    <ion-content padding="true" class=" fondo1 has-header" has-header="true">
 
-    	<h2 class="text-center" style="color:#000000;" ng-model="nombreTermino">{{nombreMateria}}</h2>
+    	<h2 class="text-center" style="color:#fff;" ng-model="nombreTermino">{{nombreMateria}}</h2>
 
 		<ion-list option-buttons="itemButtons" can-swipe="true">
 			<label class="item item-divider">
     			<b>Listado</b>
   			</label>
   			
-			<ion-item ng-repeat="termino in terminosPorMateria" ng-model="terminoSelecionadoPorMateria">		
+			<ion-item ng-repeat="termino in terminosPorMateria" ng-model="terminoSelecionadoPorMateria" class="item item-icon-right">		
 
 				<div ng-click="select_item(termino)">
-	  			 {{ termino.nombre }}
+	  			 {{ termino.nombre }} <i class="icon ion-chevron-right"></i> 
 	  			</div>
 			</ion-item>
 
